--- a/Obi/Obi/Dialogs/UserRegistration.pt.resx
+++ b/Obi/Obi/Dialogs/UserRegistration.pt.resx
@@ -119,31 +119,19 @@
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="m_btnOk.Location" type="System.Drawing.Point, System.Drawing">
-    <value>68, 480</value>
-  </data>
-  <data name="m_btnOk.Size" type="System.Drawing.Size, System.Drawing">
-    <value>111, 35</value>
+    <value>68, 530</value>
   </data>
   <data name="m_btnOk.Text" xml:space="preserve">
     <value>Re&amp;gistar</value>
   </data>
   <data name="m_btnRemindMeLater.Location" type="System.Drawing.Point, System.Drawing">
-    <value>225, 480</value>
-  </data>
-  <data name="m_btnRemindMeLater.Size" type="System.Drawing.Size, System.Drawing">
-    <value>111, 35</value>
+    <value>225, 530</value>
   </data>
   <data name="m_btnRemindMeLater.Text" xml:space="preserve">
     <value>&amp;Lembrar mais tarde</value>
   </data>
   <data name="m_txtRetypeEmail.Location" type="System.Drawing.Point, System.Drawing">
     <value>164, 95</value>
-  </data>
-  <data name="m_txtRetypeEmail.Size" type="System.Drawing.Size, System.Drawing">
-    <value>233, 21</value>
-  </data>
-  <data name="m_lblRetypeEmail.Location" type="System.Drawing.Point, System.Drawing">
-    <value>7, 103</value>
   </data>
   <data name="m_lblRetypeEmail.Size" type="System.Drawing.Size, System.Drawing">
     <value>151, 15</value>
@@ -154,12 +142,6 @@
   <data name="m_txtWinVer.Location" type="System.Drawing.Point, System.Drawing">
     <value>164, 261</value>
   </data>
-  <data name="m_txtWinVer.Size" type="System.Drawing.Size, System.Drawing">
-    <value>233, 21</value>
-  </data>
-  <data name="m_lblWinVer.Location" type="System.Drawing.Point, System.Drawing">
-    <value>2, 262</value>
-  </data>
   <data name="m_lblWinVer.Size" type="System.Drawing.Size, System.Drawing">
     <value>121, 15</value>
   </data>
@@ -169,35 +151,17 @@
   <data name="m_txtName.Location" type="System.Drawing.Point, System.Drawing">
     <value>164, 15</value>
   </data>
-  <data name="m_txtName.Size" type="System.Drawing.Size, System.Drawing">
-    <value>233, 21</value>
-  </data>
   <data name="m_txtCountry.Location" type="System.Drawing.Point, System.Drawing">
     <value>164, 223</value>
-  </data>
-  <data name="m_txtCountry.Size" type="System.Drawing.Size, System.Drawing">
-    <value>233, 21</value>
   </data>
   <data name="m_txtCity.Location" type="System.Drawing.Point, System.Drawing">
     <value>164, 181</value>
   </data>
-  <data name="m_txtCity.Size" type="System.Drawing.Size, System.Drawing">
-    <value>233, 21</value>
-  </data>
   <data name="m_txtOrganizationName.Location" type="System.Drawing.Point, System.Drawing">
     <value>164, 136</value>
   </data>
-  <data name="m_txtOrganizationName.Size" type="System.Drawing.Size, System.Drawing">
-    <value>233, 21</value>
-  </data>
   <data name="m_txtEmail.Location" type="System.Drawing.Point, System.Drawing">
     <value>164, 52</value>
-  </data>
-  <data name="m_txtEmail.Size" type="System.Drawing.Size, System.Drawing">
-    <value>233, 21</value>
-  </data>
-  <data name="m_lblCountry.Location" type="System.Drawing.Point, System.Drawing">
-    <value>7, 226</value>
   </data>
   <data name="m_lblCountry.Size" type="System.Drawing.Size, System.Drawing">
     <value>37, 15</value>
@@ -205,17 +169,11 @@
   <data name="m_lblCountry.Text" xml:space="preserve">
     <value>&amp;País :</value>
   </data>
-  <data name="m_lblCity.Location" type="System.Drawing.Point, System.Drawing">
-    <value>7, 185</value>
-  </data>
   <data name="m_lblCity.Size" type="System.Drawing.Size, System.Drawing">
     <value>90, 15</value>
   </data>
   <data name="m_lblCity.Text" xml:space="preserve">
     <value>&amp;Cidade&amp;Distrito :</value>
-  </data>
-  <data name="m_lblOrgName.Location" type="System.Drawing.Point, System.Drawing">
-    <value>2, 141</value>
   </data>
   <data name="m_lblOrgName.Size" type="System.Drawing.Size, System.Drawing">
     <value>209, 30</value>
@@ -224,38 +182,17 @@
     <value>&amp;Nome da organização :
 Use "Home" para utilizador particular</value>
   </data>
-  <data name="m_lblEmail.Location" type="System.Drawing.Point, System.Drawing">
-    <value>7, 55</value>
-  </data>
-  <data name="m_lblEmail.Size" type="System.Drawing.Size, System.Drawing">
-    <value>45, 15</value>
-  </data>
   <data name="m_lblName.Location" type="System.Drawing.Point, System.Drawing">
     <value>7, 18</value>
-  </data>
-  <data name="m_lblName.Size" type="System.Drawing.Size, System.Drawing">
-    <value>44, 15</value>
   </data>
   <data name="m_lblName.Text" xml:space="preserve">
     <value>&amp;Nome:</value>
   </data>
-  <data name="m_grpBoxUserInformation.Location" type="System.Drawing.Point, System.Drawing">
-    <value>14, 78</value>
-  </data>
   <data name="m_grpBoxUserInformation.Size" type="System.Drawing.Size, System.Drawing">
     <value>428, 291</value>
   </data>
-  <data name="m_rdbTryingObi.Location" type="System.Drawing.Point, System.Drawing">
-    <value>10, 69</value>
-  </data>
-  <data name="m_rdbTryingObi.Size" type="System.Drawing.Size, System.Drawing">
-    <value>169, 19</value>
-  </data>
   <data name="m_rdbTryingObi.Text" xml:space="preserve">
     <value>Estou a &amp;testar o programa.</value>
-  </data>
-  <data name="m_rdbDaisyProduction.Location" type="System.Drawing.Point, System.Drawing">
-    <value>10, 44</value>
   </data>
   <data name="m_rdbDaisyProduction.Size" type="System.Drawing.Size, System.Drawing">
     <value>240, 19</value>
@@ -263,38 +200,32 @@ Use "Home" para utilizador particular</value>
   <data name="m_rdbDaisyProduction.Text" xml:space="preserve">
     <value>&amp;Já uso o Obi para produzir livros DAISY.</value>
   </data>
-  <data name="m_lblSelectRadioButton.Location" type="System.Drawing.Point, System.Drawing">
-    <value>7, 22</value>
-  </data>
   <data name="m_lblSelectRadioButton.Size" type="System.Drawing.Size, System.Drawing">
     <value>207, 15</value>
   </data>
   <data name="m_lblSelectRadioButton.Text" xml:space="preserve">
     <value>Por favor selecione entre as opções :</value>
   </data>
-  <data name="m_grpBoxObiUse.Location" type="System.Drawing.Point, System.Drawing">
-    <value>14, 376</value>
-  </data>
   <data name="m_grpBoxObiUse.Size" type="System.Drawing.Size, System.Drawing">
     <value>428, 97</value>
+  </data>
+  <data name="m_chkAuthorization.Location" type="System.Drawing.Point, System.Drawing">
+    <value>14, 487</value>
+  </data>
+  <data name="m_chkAuthorization.Size" type="System.Drawing.Size, System.Drawing">
+    <value>369, 21</value>
+  </data>
+  <data name="m_chkAuthorization.Text" xml:space="preserve">
+    <value>Eu autorizo ​​o uso desses dados para o Obi.</value>
   </data>
   <data name="m_txtBoxObiInformation.AccessibleName" xml:space="preserve">
     <value>Use as setas para ler.</value>
   </data>
-  <data name="m_txtBoxObiInformation.Location" type="System.Drawing.Point, System.Drawing">
-    <value>14, 8</value>
-  </data>
   <data name="m_txtBoxObiInformation.Size" type="System.Drawing.Size, System.Drawing">
     <value>427, 76</value>
   </data>
-  <data name="$this.AutoScaleDimensions" type="System.Drawing.SizeF, System.Drawing">
-    <value>7, 15</value>
-  </data>
   <data name="$this.ClientSize" type="System.Drawing.Size, System.Drawing">
-    <value>456, 523</value>
-  </data>
-  <data name="$this.Font" type="System.Drawing.Font, System.Drawing">
-    <value>Microsoft Sans Serif, 9pt</value>
+    <value>456, 573</value>
   </data>
   <data name="$this.Text" xml:space="preserve">
     <value>Registo do Utilizador</value>
